--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ variables:
 steps:
 - task: AzureKeyVault@2
   inputs:
-    connectedServiceName: 'pipeline-connection'
+    azureSubscription: 'pipeline-connection'
     keyVaultName: 'ts-pipeline-vault'
     secretsFilter: '*'
     runAsPreJob: false
