Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,11 +24,8 @@ steps:
   displayName: 'Install Python 3.8'
 - script: pip install checkov
   displayName: 'Install Checkov'
-- script: checkov -d . --bc-api-key $(prisma-ak)::$(prisma-sk) --repo-id "try-panwiac/bicepgoat" --branch main -o junitxml > prismareport.xml
+- script: checkov -d . --bc-api-key $(prisma-access-key)::$(prisma-secret-key) --repo-id "try-panwiac/bicepgoat" --branch main -o junitxml > prismareport.xml
   displayName: 'Scan with Prisma Cloud'
-  env:
-    prisma-ak: $(prisma-access-key)
-    prisma-sk: $(prisma-secret-key)
 - task: PublishTestResults@2
   inputs:
     testResultsFormat: 'JUnit'
